# rust-fat-lto-perf-degradation

./: Cargo.toml  README.md  run
src/: main.rs
